src/objects/Lead_Insights__c.object
<CustomObject>
    <description>Table to hold insight questions associated with a lead.  These questions can be changed on a frequent basis,  so the table will store the question asked along with the answer</description>
    <fields>
        <fullName>Insight_Answer__c</fullName>
        <description>Answer to the insight question</description>
        <label>Insight Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_Question__c</fullName>
        <description>Insight Question Asked</description>
        <label>Insight Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead that answered the insight question</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead_Insights</relationshipLabel>
        <relationshipName>Lead_Insights</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead_Insight</label>
    <nameField>
        <displayFormat>INS-{0}</displayFormat>
        <label>Lead_Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead_Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>